0.0.1 alpha1 (August 2015)
================================
- First public release


0.0.2 alpha2 (Oktober 2015)
================================
- Creating single and multiple elements
- Creating categories from folderstructure
- Use mediasource for static files


0.0.3 alpha2 (Oktober 2015)
================================
- Fix wrong cascaded element categories when creating multiple elements from filesystem